--- a/Writerside/writerside.cfg
+++ b/Writerside/writerside.cfg
@@ -3,6 +3,6 @@
 
 <ihp version="2.0">
     <topics dir="topics" web-path="topics"/>
-    <images dir="images" web-path="images"/>
+    <images dir="images" web-path="Scripts"/>
     <instance src="s.tree" web-path="/s/" version="0.0.1"/>
 </ihp>
