--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -13,6 +13,12 @@ env:
   INSTANCE: Writerside/s
   ARTIFACT: webHelpS2-all.zip
   DOCKER_VERSION: 233.14389
+  ALGOLIA_APP_NAME: IATIWZA4NO
+  ALGOLIA_INDEX_NAME: prod_Scripts_Documentation_GitHub_Pages
+  ALGOLIA_KEY: ${{ secrets.ALGOLIA_KEY }}
+  ALGOLIA_ARTIFACT: algolia-indexes-S.zip
+  CONFIG_JSON_PRODUCT: S
+  CONFIG_JSON_VERSION: 0.0.1
 
 jobs:
   build:
@@ -35,11 +41,35 @@ jobs:
           path: artifacts/${{ env.ARTIFACT }}
           retention-days: 7
 
+  publish-indexes:
+    # Requires the build-job results
+    needs: build
+    runs-on: ubuntu-latest
+    container:
+      image: registry.jetbrains.team/p/writerside/builder/algolia-publisher:2.0.32-2
+
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: algolia-indexes
+      - name: Unzip artifact
+        run: |
+          unzip -O UTF-8 -qq ${{ env.ALGOLIA_ARTIFACT }} -d algolia-indexes
+          env "algolia-key=${{env.ALGOLIA_KEY}}" java -jar /opt/builder/help-publication-agent.jar \
+          update-index \
+          --application-name ${{env.ALGOLIA_APP_NAME}} \
+          --index-name ${{env.ALGOLIA_INDEX_NAME}} \
+          --product ${{env.CONFIG_JSON_PRODUCT}} \
+          --version ${{env.CONFIG_JSON_VERSION}} \
+          --index-directory algolia-indexes/ \
+          2>&1 | tee algolia-update-index-log.txt
+
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    needs: [build]
+    needs: [build, publish-indexes]
     runs-on: ubuntu-latest
     steps:
       - name: Download artifacts
